--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-functions.js"></script>
 
   <script>
     const firebaseConfig = {
