--- a/web/index.html
+++ b/web/index.html
@@ -8,16 +8,15 @@
   <meta name="google-signin-client_id" content="134973824575-cthj1d66i1rq3l4u5queb1u422q4pe6b.apps.googleusercontent.com">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="prolang">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7e57c2">
+  <meta name="msapplication-TileColor" content="#7e57c2">
+  <meta name="theme-color" content="#7e57c2">
 
-  <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
-
-  <title>prolang</title>
-  <link rel="manifest" href="manifest.json">
+  <title>ProЯзыки</title>
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
