Update web description

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="ProЯзыки - Начни говорить на иностранном языке.">
 
   <meta name="google-signin-client_id" content="134973824575-cthj1d66i1rq3l4u5queb1u422q4pe6b.apps.googleusercontent.com">
 
